--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Arulmilton — Dark Premium (Page Transitions)</title>
+  <title>ARULMILTON</title>
   <link rel="icon" href="./pics/title pic.jpeg" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com">  /* ------- 3D Tilt Hover Interactions ------- */
@@ -352,3 +352,4 @@
   </script>
 </body>
 </html>
+
